Projetos/ACBr32_DLL/ACBr_C/Exemplo_C/include/ACBr.h

#define DllImport extern "C"
#define DllImport extern

typedef void* ACBR_HANDLE;

typedef char* PCHAR;

typedef char BOOL;


typedef struct
{
    char Indice[4];
    char Descricao[30];
    BOOL PermiteVinculado;
    char FormaPagamento[4];
    double Total;
    int Contador;
} ComprovanteNaoFiscalRec;

DllImport int ECF_GetComprovanteNaoFiscal(const ACBR_HANDLE ecfHandle, ComprovanteNaoFiscalRec* comprovanteNaoFiscal, const int index);

DllImport int ECF_CarregaComprovantesNaoFiscais(const ACBR_HANDLE ecfHandle);

DllImport int ECF_LerTotaisComprovanteNaoFiscal(const ACBR_HANDLE ecfHandle);

DllImport int ECF_ProgramaComprovanteNaoFiscal(const ACBR_HANDLE ecfHandle, const PCHAR descricao, const PCHAR tipo, const PCHAR posicao);

DllImport int ECF_Sangria(const ACBR_HANDLE ecfHandle, const double valor, const PCHAR obs);

DllImport int ECF_Suprimento(const ACBR_HANDLE ecfHandle, const double valor, const PCHAR obs);

DllImport int ECF_AbreGaveta(const ACBR_HANDLE ecfHandle);


/*BALANÇA*/

DllImport int BAL_Create(const ACBR_HANDLE* balHandle);

DllImport int BAL_Destroy(const ACBR_HANDLE* balHandle);


DllImport int BAL_GetUltimoErro(const ACBR_HANDLE balHandle, PCHAR buffer, const int bufferLen);

DllImport int BAL_Ativar(const ACBR_HANDLE balHandle);

DllImport int BAL_Desativar(const ACBR_HANDLE balHandle);

DllImport int BAL_GetModelo(const ACBR_HANDLE balHandle);

DllImport int BAL_SetModelo(const ACBR_HANDLE balHandle, const int modelo);

DllImport int BAL_GetModeloStr(const ACBR_HANDLE balHandle, PCHAR buffer, const int bufferLen);

DllImport int BAL_GetPorta(const ACBR_HANDLE balHandle, PCHAR buffer, const int bufferLen);

DllImport int BAL_SetPorta(const ACBR_HANDLE balHandle, const PCHAR porta);

DllImport int BAL_GetAtivo(const ACBR_HANDLE balHandle);

DllImport int BAL_GetUltimoPesoLido(const ACBR_HANDLE balHandle, double* value);

DllImport int BAL_GetUltimaResposta(const ACBR_HANDLE balHandle, PCHAR buffer, const int bufferLen);

DllImport int BAL_LePeso(const ACBR_HANDLE balHandle, const int timeout, double* value);