Projetos/ACBrFramework/jACBrFramework/ACBrFramework_JNI/include/ACBrLCB.h


typedef void* INTPTR;


// Tipos de dados


// Funções

DllImport int LCB_Ativar(const INTPTR lcbHandle);

DllImport int LCB_Create(INTPTR* lcbHandle);

DllImport int LCB_Desativar(const INTPTR lcbHandle);

DllImport int LCB_Destroy(INTPTR* lcbHandle);

DllImport int LCB_GetAtivo(const INTPTR lcbHandle);

DllImport int LCB_GetPorta(const INTPTR lcbHandle, PCHAR buffer, const int bufferLen);

DllImport int LCB_GetUltimoErro(const INTPTR lcbHandle, PCHAR buffer, const int bufferLen);

DllImport int LCB_SetPorta(const INTPTR lcbHandle, const PCHAR porta);