Projetos/ACBr32_DLL/ACBr.Net/ACBr.Net/ACBrDll.cs


        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_GetComprovanteNaoFiscal(IntPtr ecfHandle, ref ComprovanteNaoFiscalRec comprovanteNaoFiscal, int index);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_CarregaComprovantesNaoFiscais(IntPtr ecfHandle);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_LerTotaisComprovanteNaoFiscal(IntPtr ecfHandle);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_ProgramaComprovanteNaoFiscal(IntPtr ecfHandle, string descricao, string tipo, string posicao);

        #endregion Comprovante não fiscal

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_Sangria(IntPtr ecfHandle, double valor, string obs);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_Suprimento(IntPtr ecfHandle, double valor, string obs);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECF_AbreGaveta(IntPtr ecfHandle);

        #endregion ACBrECF

        #region ACBrBal

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int BAL_Create(ref IntPtr balHandle);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int BAL_Destroy(ref IntPtr balHandle);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int BAL_GetUltimoErro(IntPtr balHandle, ref StringBuilder buffer, int bufferLen);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int BAL_Ativar(IntPtr balHandle);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int BAL_Desativar(IntPtr balHandle);

        #region Propriedades do Componente

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int BAL_GetModelo(IntPtr balHandle);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int BAL_SetModelo(IntPtr balHandle, int modelo);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int BAL_GetModeloStr(IntPtr balHandle, ref StringBuilder buffer, int bufferLen);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int BAL_GetPorta(IntPtr balHandle, ref StringBuilder buffer, int bufferLen);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int BAL_SetPorta(IntPtr balHandle, string porta);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int BAL_GetAtivo(IntPtr balHandle);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int BAL_GetUltimoPesoLido(IntPtr balHandle, ref double peso);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int BAL_GetUltimaResposta(IntPtr balHandle, ref StringBuilder buffer, int bufferLen);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int BAL_LePeso(IntPtr balHandle, int timeout, ref double peso);

        #endregion Propriedades do Componente

        #endregion ACBrBal

        #region ACBrLCB

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int LCB_Create(ref IntPtr lcbHandle);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int LCB_Destroy(ref IntPtr lcbHandle);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int LCB_GetUltimoErro(IntPtr lcbHandle, ref StringBuilder buffer, int bufferLen);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int LCB_Ativar(IntPtr lcbHandle);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int LCB_Desativar(IntPtr lcbHandle);

        #region Propriedades do Componente

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int LCB_GetPorta(IntPtr lcbHandle, ref StringBuilder buffer, int bufferLen);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int LCB_SetPorta(IntPtr lcbHandle, string porta);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int LCB_GetAtivo(IntPtr lcbHandle);

        public delegate void TNotifyEvent(IntPtr p);

        [DllImport("ACBr32.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int LCB_SetOnLeCodigo(IntPtr lcbHandle, [MarshalAs(UnmanagedType.FunctionPtr)]TNotifyEvent method);

        #endregion Propriedades do Componente

        #endregion ACBrLCB
    }
}
